# iso3166-scraper

./: Pipfile  README.md  deploy.sh  setup.cfg
src/main/python/iso3166_scraper/: __main__.py  extractor.py  flag_mapper.py  names.py  retriever.py  scraper.py
