[metadata]
name = iso3166-scraper
version = 0.0.1
author = Carl Harris
author_email = ceharris414@gmail.com
description = A Python utility that scrapes ISO 3166 country code data from Wikipedia
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/soulwing/iso3166-scraper
project_urls =
    Bug Tracker = https://github.com/soulwing/iso3166-scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/main/python
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4
    requests
    ruamel.yaml
[options.entry_points]
console_scripts =
    iso3166-scraper = iso3166_scraper:scraper.main

[options.packages.find]
where = src/main/python
include = iso3166_scraper
